quick fix for footer bottom white space

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,6 +37,11 @@
   }
 }
 
+// @TODO Remove this after updating to DS 0.12.0
+.nypl--locations .footer {
+  box-sizing: content-box;
+}
+
 // IE11 only
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   // Add your CSS here
